{
    "name": "Main",
    "maps": [
        {
            "name": "Main",
            "id": "820a595c-4a4c-4506-a8f4-08d4e8863992",
            "actions": [
                {
                    "name": "SkipAnimation",
                    "type": "Button",
                    "id": "036f35d0-ffb9-478f-9b28-ff917bc35c9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e578527e-7150-4539-9dd9-ad625b2ed809",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipAnimation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf949cb5-b735-4c7f-998e-5619bca1f854",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipAnimation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05b849e0-376e-46f0-a94b-b460ce6d8bb2",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipAnimation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c35549a2-2ce8-47e9-9296-04fd7c2eefe7",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipAnimation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}